--- a/src/index.html
+++ b/src/index.html
@@ -14,32 +14,31 @@
 <body>
  
 <!--Navigation-->
-<nav class="navbar navbar-expand-md  navbar-dark sticky-top">
+
+<nav  class="navbar navbar-expand-md  navbar-dark sticky-top">
   <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div  class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#meet-team">Meet the Team</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Connect</a>
+        <a class="nav-link" href="#connect">Connect</a>
       </li>
     </ul>
   </div>
 </nav>
+
 <!--End Navigation-->
 
 <!--Image Slider-->
-<div class="header d-flex justify-content-center align-items-center">
+<div id="home"  class="header d-flex justify-content-center align-items-center">
   <div class="row text-center">
     <div class="col-12 mb-3">
       <h1>Welcome to us page, enjoy!</h1>
@@ -97,7 +96,7 @@
           <img src="./img/bootstrap4.png" alt="bootstrap4">
         </div>
         <div class="col-sm-12 col-xl-6">
-          <h5 class="proba">Easy to Customize</h5>
+          <h5 class="proba">BOOTSTRAP</h5>
         <p class="text-muted">Easily customize the text and replace the images to suit your own app.</p>
         </div>
       </div><!--End row-->
@@ -108,7 +107,7 @@
           <img src="./img/css3.png" alt="css3">
         </div>
         <div class="col-sm-12 col-xl-6">
-          <h5 class="proba">Unlimited Colors</h5>
+          <h5 class="proba">CSS</h5>
         <p class="text-muted">Easily change the colors in CSS that can go well with your branding.</p>
         </div>
       </div><!--End row-->
@@ -165,7 +164,7 @@
 <!--End Fixed Background-->
 
 <!--Meet the team-->
-<div class="container-fluid padding">
+<div id="meet-team" class="container-fluid padding">
   <div class="row welcome text-center">
     <div class="col-12">
       <h2 class="h1 display-4">Meet the Team</h1>
@@ -208,7 +207,7 @@
 <!--End Meet the team-->
 
 <!--Connect-->
-<div class="container padding mt-5">
+<div id="connect" class="container padding mt-5">
   <div class="row text-center padding">
     <div class="col-12">
       <h2 class="display-4 ">Connect</h2>
