worked on margins

--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,7 @@
   </div><!--End row-->
   <div class="row padding ">
    <div class="col-md-4">
-    <div class="card" >
+    <div class="card mb-3" >
       <img class="card-img-top" src="img/team1.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">John Doe</h5>
@@ -183,7 +183,7 @@
     </div><!--End card-->
   </div><!--End column-->
   <div class="col-md-4">
-    <div class="card" >
+    <div class="card mb-3" >
       <img class="card-img-top" src="img/team2.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Mary Joe</h5>
@@ -193,7 +193,7 @@
     </div><!--End card-->
   </div><!--End column-->
   <div class="col-md-4">
-    <div class="card" >
+    <div class="card mb-3" >
       <img class="card-img-top" src="img/team3.png" alt="Card image cap">
       <div class="card-body">
         <h5 class="card-title">Phil Truman</h5>
